PGI-127 | Fixed hero block overflow.

--- a/themes/custom/c2d_theme/css/5.components/components.block.hero.css
+++ b/themes/custom/c2d_theme/css/5.components/components.block.hero.css
@@ -6,10 +6,6 @@
 .clearfix:after{
   clear:both;
 }
-.region.region-top{
-  position:relative;
-  top:0;
-}
 @media print, screen and (min-width: 80em){
   .region.region-top{
     margin-top:-12rem;
@@ -17,6 +13,7 @@
 }
 @media print, screen and (min-width: 80em){
   .region.region-top .hero-block-type{
+    position:relative;
     display:flex;
     justify-content:center;
     width:100%;
@@ -40,7 +37,7 @@
     bottom:0;
     background-color:transparent;
     max-width:127rem;
-    margin-top:6rem;
+    margin-top:12rem;
     margin-bottom:0;
     margin-left:auto;
     margin-right:auto;
